feat(back): [3] add dynamo db
