# src/main/java/com/ffresco/pricelist/infrastructure/adapter/in/function/catalog/GetCatalogVersionRequest.java
@@ -1,0 +1,4 @@
+package com.ffresco.pricelist.infrastructure.adapter.in.function.catalog;
+
+public record GetCatalogVersionRequest(String branchId) {
+}
